--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -6,6 +6,9 @@
       = f.input :name
   .row
     .col-md-6
+      = f.input :roles, collection: User.valid_roles
+  .row
+    .col-md-6
       = f.input :email
 
   %fieldset.text-right
