--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -9,6 +9,7 @@
         %th #
         %th Name
         %th Email
+        %th Roles
         %th Member Since
         %th Tasks
     %tbody
@@ -27,6 +28,7 @@
         %th #
         %th Name
         %th Email
+        %th Roles
         %th Invited On
         %th Tasks
     %tbody
