--- a/app/views/layouts/admin/_sidebar.html.haml
+++ b/app/views/layouts/admin/_sidebar.html.haml
@@ -3,7 +3,7 @@
     .item.user-block
       .user-block-picture
         .user-block-status
-          %img.img-thumbnail.img-circle{:alt => "Avatar", :height => "60", :src => "app/img/user/02.jpg", :width => "60"}/
+          %img.img-thumbnail.img-circle{:alt => "Avatar", :height => "60", :src => gravatar_image_url(current_user.email), :width => "60"}/
           .circle.circle-success.circle-lg
       .user-block-info
         %span.user-block-name.item-text Welcome User
