--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,20 +16,49 @@
  */
 body {
   background-color: #fff;
-  font: 400 15px 'Open Sans',Arial,sans-serif;
+  font: 400 15px 'PT Sans Narrow',Arial,sans-serif;
 }
+
+
+ #logo {
+    -webkit-border-radius: 90px;
+    -moz-border-radius: 90px;
+    border-radius: 90px;
+    background: #7266ba;
+    font-size: 2.8em;
+    font-family: 'Grand Hotel';
+    font-weight: bold;
+    display: table-cell;
+    /*padding: 0px 22px 8PX 22px;*/
+    padding: 0px 15px;
+    line-height: 90PX;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+}
+.brand-text {
+  color: #7266ba;
+  font-family: 'PT Sans Narrow';
+  font-size: 3em;
+}
+.brand-text .upper {
+  font-family: 'Grand Hotel';
+}
+
 .navbar {
-  font: 400 14px Montserrat,Arial,Sans-Serif;
-  text-transform: uppercase;
+  /* font: 400 14px Montserrat,Arial,Sans-Serif; */
   padding: 10px 0px !important;
   box-shadow: 0px 4px 24px -6px #777777;
 }
 .navbar-brand { color: #7266ba !important; }
 .navbar-brand:hover { color: #7266ba !important;}
+.navbar-brand span.tagline { display: block; font-size: .8em; text-transform: none;}
 .navbar li a { color: #7d7d7d !important;}
 .navbar li a:hover { color: #7266ba !important; }
+
 h3 { color: #656565; font: 700 26px Montserrat,arial,sans-serif; margin: 15px 0;}
 section { background-color: #fff;}
+
 li.active a { background-color: #fff !important; border-bottom: 1px solid #7266ba;  color: #7266ba !important;}
 footer {
   border-top: #777;
@@ -100,8 +129,7 @@ article .actions .social {
   border-top-right-radius: 60px;
   border-bottom-right-radius: 60px;
 }
-.atom { font-size: 3.0em;}
-.brand-text { vertical-align: middle; margin-top: -30px; display: inline-block; font-size: 2.0em;}
+.brand-text { vertical-align: middle; margin-top: -30px; display: inline-block; font-size: 2.5em;}
 .sidebar { background: #fff !important;}
 .content h4 { text-transform: uppercase; }
 .sidebar { border-left: 1px solid #ededed; padding-left: 3%; padding-right: 3%;}
