--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    %link{href: 'http://fonts.googleapis.com/css?family=Crushed|PT+Sans+Narrow:400,700|Neucha|Istok+Web:400,700|Exo:400,700|Grand+Hotel|Englebert|Montserrat|Exo+2:700|Roboto+Condensed:400,700|Roboto:400,700', rel: 'stylesheet', type: 'text/css'}
     %link{href: 'http://fonts.googleapis.com/css?family=Lora|Open+Sans|Montserrat', rel: 'stylesheet', type: 'text/css'}
   %body
     .navbar.navbar-inverse.navbar-fixed-top{:role => "navigation", style: 'background-color: #fff; border: 0px;'}
@@ -24,8 +25,11 @@
             %span.icon-bar
             %span.icon-bar
           %a.navbar-brand{:href => "#"}
-            %span.atom ⚛
-            %span.brand-text nurdgurls
+            #logo.pull-left NG
+            .brand-text{style: "margin-left: 20px; margin-top: 10px;"}
+              .name
+                <span class='upper'>N</span>urd <span class='upper'>G</span>urls
+              .tagline{style: "margin-top: 20px; font-size: 0.4em; font-family: 'PT Sans Narrow'"} Facts don't see gender; too bad, because we're gorgeous!
         .collapse.navbar-collapse
           %ul.nav.navbar-nav.navbar-right
             = navigation_link("Home", "/")
