--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
     %link{href: 'http://fonts.googleapis.com/css?family=Crushed|PT+Sans+Narrow:400,700|Neucha|Istok+Web:400,700|Exo:400,700|Grand+Hotel|Englebert|Montserrat|Exo+2:700|Roboto+Condensed:400,700|Roboto:400,700', rel: 'stylesheet', type: 'text/css'}
     %link{href: 'http://fonts.googleapis.com/css?family=Lora|Open+Sans|Montserrat', rel: 'stylesheet', type: 'text/css'}
   %body
-    .navbar.navbar-inverse.navbar-fixed-top{:role => "navigation", style: 'background-color: #fff; border: 0px;'}
+    .navbar.navbar-inverse.navbar-fixed-top{:role => "navigation", style: 'border: 0px;'}
       .container-fluid
         .navbar-header
           %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
