fix button styles for social

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -134,6 +134,7 @@ article .actions .social {
   border-top-right-radius: 60px;
   border-bottom-right-radius: 60px;
 }
+.twitter, .facebook, .google-plus, .reddit { color: #fff !important;}
 .brand-text { vertical-align: middle; margin-top: -30px; display: inline-block; font-size: 2.5em;}
 .sidebar { background: #fff !important;}
 .content h4 { text-transform: uppercase; }
